@@ -136,6 +136,7 @@ match (``list``)
     * kwargs provided to request e.g. ``stream``, ``verify``
     * 'multipart/form-data' content and headers in request
     * request headers
+    * request fragment identifier
 
     Alternatively user can create custom matcher.
     Read more `Matching Requests`_
@@ -269,6 +270,33 @@ to the request:
 
     my_func()
     # >>> raises ConnectionError: multipart/form-data doesn't match. Request body differs.
+
+
+To validate request URL fragment identifier you can use ``matchers.fragment_identifier_matcher``.
+The matcher takes fragment string (everything after ``#`` sign) as input for comparison:
+
+.. code-block:: python
+
+    import requests
+    import responses
+    from responses.matchers import fragment_identifier_matcher
+
+    @responses.activate
+    def run():
+        url = "http://example.com?ab=xy&zed=qwe#test=1&foo=bar"
+        responses.add(
+            responses.GET,
+            url,
+            match_querystring=True,
+            match=[fragment_identifier_matcher("test=1&foo=bar")],
+            body=b"test",
+        )
+
+        # two requests to check reversed order of fragment identifier
+        resp = requests.get("http://example.com?ab=xy&zed=qwe#test=1&foo=bar")
+        resp = requests.get("http://example.com?zed=qwe&ab=xy#foo=bar&test=1")
+
+    run()
 
 Matching Request Headers
 ------------------------
