@@ -38,3 +38,7 @@ def header_matcher(
     headers: Dict[str, str],
     strict_match: bool = ...
 ) -> Callable[..., Any]: ...
+
+def fragment_identifier_matcher(
+    identifier: Optional[str]
+) -> Callable[..., Any]: ...
